# marimba

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  bandit.yml  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-e2e.yml  ci-nightly.yml  ci.yml
config/: .flake8  .isort.cfg  .pydocstyle  .ruff.toml  __init__.py  bandit.yml  coverage.ini  mkdocs.yml  mypy.ini  pytest.ini  ruff.toml  vulture.py
docs/: ENVIRONMENT.md  FEATURES.md  USAGE.md  api.md  contributing.md  environment.md  hackathon.md  pipeline.md  sdcardworkflow.md
docs/api/: core.md  utils.md
docs/releases/: v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.4.5.md  v0.4.6.md  v0.4.7.md  v0.4.8.md  v1.0.0.md  v1.0.1.md  v1.1.0.md  v1.2.0.md
docs/templates/: template.pipeline.py
marimba/: __init__.py  main.py  marimba.py
marimba/commands/: catalog.py  catalogue.py  chunk.py  config.py  convert.py  copy.py  extract.py  metadata.py  new.py  process.py  qc.py  rename.py  template.py
marimba/core/: __init__.py  base_instrument.py  collection.py  command.py  deployment.py  instrument.py  metadata.py  pipeline.py  project.py
marimba/core/cli/: chunk.py  delete.py  new.py
marimba/core/commands/: convert.py  extract.py  new.py  qc.py
marimba/core/distribution/: base.py  bases.py  dap.py  s3.py
marimba/core/installer/: pip_executor.py  pipeline_installer.py  uv_executor.py
marimba/core/parallel/: pipeline_loader.py
marimba/core/schemas/: base.py  darwin.py  generic.py  ifdo.py
marimba/core/schemas/header/: __init__.py  base.py
marimba/core/utils/: config.py  constants.py  dataset.py  dependencies.py  exif_tags.py  file_system.py  hash.py  ifdo.py  log.py  maifest.py  manifest.py  map.py  metadata.py  metadata_saver.py  paths.py  prompt.py  provenance.py  rich.py  summary.py
marimba/core/validators/: __init__.py  ifdo.py
marimba/core/wrappers/: _collection_schema.py  _safety.py  card.py  collection.py  dataset.py  pipeline.py  pipeline_installer.py  project.py  raw.py  target.py
marimba/distribution/: bases.py  s3.py
marimba/lib/: __init__.py  concurrency.py  decorators.py  exif.py  gps.py  image.py  parallel.py  video.py
marimba/utils/: config.py  context.py  exif_tags.py  file_system.py  ifdo.py  instrument.py  log.py  logger_config.py  map.py  prompt.py  registry.py  rich.py
marimba/wrappers/: collection.py  dataset.py  deployment.py  instrument.py  package.py  pipeline.py  project.py  target.py
resources/schemas/ifdo/: annotation-v2.0.0.json
scripts/: bashrc  import_all.py  initslise_all.py
src/: marimba.py
src/commands/: catalogue.py  chunk.py  config.py  convert.py  copy.py  extract.py  ifdo.py  metadata.py  qc.py  rename.py
src/config/: metadata.yml
src/utils/: config.py  file_system.py  ifdo.py  logger_config.py  registry.py
templates/albatross/collection/: cookiecutter.json
templates/albatross/deployment/: cookiecutter.json
templates/albatross/instrument/: cookiecutter.json
templates/algae/collection/: cookiecutter.json
templates/algae/deployment/: cookiecutter.json
templates/algae_detection/collection/: cookiecutter.json
templates/algae_detection/deployment/: cookiecutter.json
templates/algae_detection/instrument/: cookiecutter.json
templates/bruvs/collection/: cookiecutter.json
templates/bruvs/deployment/: cookiecutter.json
templates/bruvs/instrument/: cookiecutter.json
templates/eel/collection/: cookiecutter.json
templates/eel/deployment/: cookiecutter.json
templates/eel/instrument/: cookiecutter.json
templates/investigator/collection/: cookiecutter.json
templates/investigator/deployment/: cookiecutter.json
templates/investigator/instrument/: cookiecutter.json
templates/p4rtk/: cookiecutter.json
templates/p4rtk/{{cookiecutter.PlatformID}}/: platform.yml
templates/survey/: cookiecutter.json
templates/survey/{{cookiecutter.survey_id}}/: survey_config.yml
templates/zeiss_axio_observer/: cookiecutter.json
templates/zeiss_axio_observer/{{cookiecutter.strain_identifier}}_{{cookiecutter.contrast_identifier}}_{{cookiecutter.biological_stain_identifier}}/: platform.yml
templates/zeiss_batch/: cookiecutter.json
templates/zeiss_batch/{{cookiecutter.datestamp}}_{{cookiecutter.ident}}/: survey_config.yml
tests/: conftest.py  import.py  initalise.py  initialise.py  make_bruv.sh  newinstrument.py  test_main.py  test_py_typed.py
tests/commands/: test_import.py
tests/core/: test_pipeline.py
tests/core/cli/: test_delete.py  test_new.py
tests/core/distribution/: test_base.py  test_dap.py  test_s3.py
tests/core/installer/: test_pip_executor.py  test_pipeline_installer.py  test_uv_executor.py
tests/core/parallel/: __init__.py  test_pipeline_loader.py
tests/core/schemas/: test_base.py  test_darwin.py  test_generic.py  test_ifdo.py  test_ifdo_process_files.py
tests/core/utils/: test_config.py  test_dataset.py  test_dependencies.py  test_hash.py  test_ifdo.py  test_log.py  test_manifest.py  test_map.py  test_metadata.py  test_paths.py  test_prompt.py  test_provenance.py  test_rich.py  test_summary.py
tests/core/validators/: test_ifdo.py
tests/core/wrappers/: test_collection.py  test_dataset.py  test_pipeline.py  test_project.py  test_project_characterisation.py  test_target.py
tests/e2e/: __init__.py  conftest.py  test_collection.py  test_dataset.py  test_distribution.py  test_install.py  test_pipeline.py  test_project.py  test_update.py
tests/e2e/regression/: README.md  __init__.py  conftest.py  scrub.py  test_regression.py  test_scrub.py  test_smoke.py
tests/lib/: test_concurrency.py  test_decorators.py  test_exif.py  test_gps.py  test_image.py  test_video.py
tests/utils/: test_config.py  test_context.py  test_exif_tags.py  test_file_system.py  test_ifdo.py
tests/wrappers/: test_dataset.py  test_package.py
(+49 files in other folders)
