[project]
name = "marimba"
version = "1.0.0"
description = "A Python framework for structuring, processing, packaging and distributing FAIR scientific image datasets"
authors = [
    { name = "Chris Jackett", email = "chris.jackett@csiro.au" },
    { name = "Kevin Barnard", email = "kbarnard@mbari.org" },
]
requires-python = "~=3.10"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "typer>=0.15.1,<0.16",
    "rich>=13.3.1,<14",
    "PyYAML~=6.0",
    "ifdo>=1.3.0,<2",
    "pillow>=11.1.0,<12",
    "opencv-python-headless>=4.7.0.72,<5",
    "gitpython>=3.1.44,<4",
    "boto3>=1.35.94,<2",
    "staticmap>=0.5.7,<0.6",
    "piexif>=1.1.3,<2",
    "tabulate>=0.9.0,<0.10",
    "av>=14.0.1,<15",
    "distlib>=0.3.8,<0.4",
    "numpy>=2.2.5",
    "botocore>=1.38.2",
    "requests>=2.32.3",
    "uv>=0.7.8",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
]

[project.scripts]
marimba = "marimba.main:marimba_cli"

[project.urls]
"Homepage" = "https://github.com/csiro-fair/marimba"
"Documentation" = "https://github.com/csiro-fair/marimba/tree/main/docs"
"Bug Tracker" = "https://github.com/csiro-fair/marimba/issues"

[dependency-groups]
dev = [
    "black>=24.4.2,<25",
    "isort>=5.13.2,<6",
    "pre-commit>=3.5.0,<4",
    "pytest>=7.4.2,<8",
    "flake8>=7.0.0,<8",
    "mypy>=1.10.0,<2",
    "types-pyyaml>=6.0.12.20240311,<7",
    "bandit>=1.7.8,<2",
    "pydocstyle>=6.3.0,<7",
    "pylint>=3.2.0,<4",
    "pytest-cov>=5.0.0,<6",
    "pep8-naming>=0.14.1,<0.15",
    "flake8-bugbear>=24.4.26,<25",
    "flake8-comprehensions>=3.14.0,<4",
    "flake8-builtins>=2.5.0,<3",
    "types-tabulate>=0.9.0.20240106,<0.10",
    "types-requests>=2.32.0.20240622,<3",
    "ruff>=0.7.0,<0.8",
    "hatch>=1.14.1,<2",
    "twine>=6.1.0,<7",
    "deptry>=0.23.0",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.env
  | \.venv
  | build
  | dist
  | temp
)/
'''

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["marimba"]

[tool.hatch.build.targets.wheel.force-include]
"marimba/py.typed" = "marimba/py.typed"

[tool.deptry.package_module_name_map]
pillow = ["PIL"]
PyYAML = ["yaml"]
gitpython = ["git"]
opencv-python-headless = ["cv2"]
